[package]
name = "merkle-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
futures = "0.3"
csv = "1.1"
regex = "1.9.3"
sha2 = "0.10.7"
bytes = "1.5.0"
migration = { path = "migration" }
dotenvy = "0.15"
chrono = "0.4.31"
merkle_light = "0.4.0"

[dependencies.sea-orm]
version = "0.12.2"
features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ]
default-features = false

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
