[package]
name = "merkle-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json", "multipart"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
futures = "0.3"
csv = "1.1"
regex = "1.9.3"
bytes = "1.5.0"
dotenvy = "0.15"
chrono = "0.4.31"
warp = "0.3.5"
serde_json = "1.0.107"
ethers-rs = "0.2.3"
hex = "0.4.3"
merkle-tree-rs = "0.1.0"
vercel_runtime = "1.1.0"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "main"
path = "api/main.rs"