[package]
    authors = ["Sablier <contact@sablier.com>"]
    description = "A web2 API that generates a Merkle tree"
    edition = "2021"
    homepage = "https://github.com/sablier-labs/v2-services"
    name = "sablier_merkle_api"
    version = "0.0.1"

[[bin]]
    name = "create"
    path = "api/create.rs"

[[bin]]
    name = "eligibility"
    path = "api/eligibility.rs"

[[bin]]
    name = "health"
    path = "api/health.rs"

[[bin]]
    name = "validity"
    path = "api/validity.rs"

[dependencies]
    bytes = "1.5.0"
    chrono = "0.4.31"
    csv = "1.1"
    dotenvy = "0.15"
    ethers-rs = "0.2.3"
    futures = "0.3"
    hex = "0.4.3"
    merkle-tree-rs = "0.1.0"
    multipart = "0.18.0"
    regex = "1.9.3"
    reqwest = { version = "0.11.20", features = ["json", "multipart"] }
    serde = { version = "1.0.152", features = ["derive"] }
    serde_json = "1.0.107"
    tokio = { version = "1.24.1", features = ["full"] }
    url = "2.4.1"
    vercel_runtime = "1.1.0"
    warp = "0.3.5"
    warp_lambda = "0.1.4"

[dependencies.uuid]
    features = [
        "v4",                # Lets you generate random UUIDs
        "fast-rng",          # Use a faster (but still sufficiently random) RNG
        "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    ]
    version = "1.4.1"
